# promptguard-cli

./: .gitignore  AGENTS.md  CLI_DEPLOYMENT_WORKFLOW.md  CLI_RELEASE_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  FIRST_RELEASE.md  LICENSE  Makefile  README.md  RELEASE.md  SETUP_PUBLIC_REPO.md  clippy.toml  install.sh  rustfmt.toml  setup-public-repo.sh  uninstall.sh  verify.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-cli.yml
src/: error.rs  lib.rs  main.rs  types.rs
src/analyzer/: envscanner.rs  mod.rs
src/api/: mod.rs
src/auth/: mod.rs
src/backup/: mod.rs
src/commands/: apply.rs  benchmark.rs  config.rs  dashboard.rs  disable.rs  doctor.rs  enable.rs  events.rs  init.rs  key.rs  login.rs  logout.rs  logs.rs  mcp.rs  mod.rs  policy.rs  projects.rs  redact.rs  redteam.rs  revert.rs  scan.rs  status.rs  test.rs  update.rs  verify.rs  whoami.rs
src/config/: mod.rs
src/detector/: core.rs  mod.rs  python.rs  queries.rs  registry.rs  typescript.rs
src/env/: mod.rs
src/output/: mod.rs
src/scanner/: mod.rs
src/shim/: generator.rs  injector.rs  mod.rs  templates.rs
src/transformer/: core.rs  mod.rs  python.rs  typescript.rs
tests/: api_command_tests.rs  command_tests.rs  contract_tests.rs  environment_scanner_tests.rs  runtime_shim_tests.rs
tests/fixtures/openai-hello-world/: README.md  hello.js  hello.py  hello.ts  package.json
